Fix table minor bugs

--- a/libs/base/src/shared/components/features/table/columns/table-col-default/table-col-default.component.html
+++ b/libs/base/src/shared/components/features/table/columns/table-col-default/table-col-default.component.html
@@ -13,7 +13,7 @@
       </div>
       <cac-table-sort class="ms-1" #Sort [column]="col" [sortModel]="options.sortModel!"></cac-table-sort>
 
-      <cac-table-filter [column]="col" [filterModel]="options.filterModel!"></cac-table-filter>
+      <cac-table-filter class="ms-1" [column]="col" [filterModel]="options.filterModel!"></cac-table-filter>
     </div>
   </th>
   <td
