--- a/libs/base/src/shared/components/features/table/table-header/table-header.component.scss
+++ b/libs/base/src/shared/components/features/table/table-header/table-header.component.scss
@@ -1,3 +1,24 @@
 :host {
   display: contents;
 }
+
+:host ::ng-deep .refresh-button {
+  .refresh-button-text {
+    transition: all 0.2s ease;
+    font-size: 0.875rem;
+    overflow: hidden;
+    width: 0;
+  }
+  &:hover {
+    button:not(:disabled) {
+      .refresh-button-text {
+        width: 3rem;
+      }
+    }
+  }
+  button:disabled {
+    cac-icon {
+      @apply animate-spin;
+    }
+  }
+}
