--- a/libs/base/src/shared/components/features/snackbar/snackbar-base/snackbar-base.component.scss
+++ b/libs/base/src/shared/components/features/snackbar/snackbar-base/snackbar-base.component.scss
@@ -18,7 +18,7 @@
   font-size: 1rem;
   font-weight: 600;
   text-align: center;
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 @keyframes snack-anim {
