Minor UX fixes that changes your life forever

--- a/libs/base/src/shared/components/features/form-builder/form-builder.component.html
+++ b/libs/base/src/shared/components/features/form-builder/form-builder.component.html
@@ -1,7 +1,7 @@
 @if (!_options.allowAutocomplete) {
   <!-- These inputs prevent firefox/chrome from autocompleting fields, and yes, this is the only solution I've found -->
   <input tabindex="-1" type="text" style="opacity: 0; position: absolute; pointer-events: none" />
-  <input tabindex="-1" type="password" style="opacity: 0; position: absolute; pointer-events: none" />
+<!--  <input tabindex="-1" type="password" style="opacity: 0; position: absolute; pointer-events: none" />-->
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 }
 
