--- a/libs/base/src/shared/components/layouts/dialog-layout/dialog-layout.component.html
+++ b/libs/base/src/shared/components/layouts/dialog-layout/dialog-layout.component.html
@@ -13,7 +13,7 @@
       <p class="text-surface-on text-sm mt-2">{{ subtitle }}</p>
     }
   </div>
-  <div class="flex flex-col mt-1 flex-auto overflow-auto">
+  <div class="flex flex-col mt-1 p-2 flex-auto overflow-auto">
     <ng-content></ng-content>
   </div>
   @if (!hideControls) {
