--- a/apps/playground/src/app/app.component.html
+++ b/apps/playground/src/app/app.component.html
@@ -2,6 +2,9 @@
 
 <p class="">TESTXXzz</p>
 
+<!--<input [formControl]="control" />-->
+<!--<p>{{ control.error$ | async }}</p>-->
+
 <div class="w-40 h-40 overflow-auto m-9 border border-red-100">
   <div class="w-full h-screen transition-none"></div>
 </div>
