--- a/libs/base/src/shared/components/ui/field/field.component.html
+++ b/libs/base/src/shared/components/ui/field/field.component.html
@@ -26,7 +26,7 @@
   [hideRequiredMarker]="true"
   [class.loading]="loading"
   [title]="control.displayText ?? (control.value !== null && control.value !== undefined ? control.value : '')"
-  [floatLabel]="overrideFloatLabel() ?? floatLabel ?? 'auto'"
+  [floatLabel]="overrideFloatLabel() ?? floatLabel ?? (label && placeholder ? 'always' : 'auto')"
   (click)="onFormFieldClick()"
   >
   @if (label) {
