--- a/libs/base/src/shared/components/ui/tabs/tabs.component.html
+++ b/libs/base/src/shared/components/ui/tabs/tabs.component.html
@@ -1,22 +1,16 @@
-<div>
-  <mat-tab-group (selectedTabChange)="currentIndex = $event.index" mat-stretch-tabs="true" mat-align-tabs="center">
-    @for (tab of tabs(); track tab.label; let index = $index) {
-      <mat-tab [label]="tab.label">
-        @if (hasIcon) {
-          <ng-template mat-tab-label>
-            <mat-icon
-              class="w-4 h-4 mx-2 {{ index === currentIndex ? 'text-primary' : 'text-gray-700' }}"
-              [svgIcon]="tab.icon ?? 'tabicon'"
-            ></mat-icon>
-            {{ tab.label }}
-          </ng-template>
+<mat-tab-group (selectedTabChange)="currentIndex.set($event.index)" [dynamicHeight]="dynamicHeight()" mat-stretch-tabs="true" mat-align-tabs="center">
+  @for (tab of tabs(); track tab.label(); let index = $index) {
+    <mat-tab [label]="tab.label()">
+      <ng-template mat-tab-label>
+        @if (tab.icon()) {
+          <mat-icon
+            class="w-4 h-4 mx-2 {{ index === currentIndex() ? 'text-primary' : 'text-gray-700' }}"
+            [svgIcon]="tab.icon()!"
+          ></mat-icon>
         }
-        @for (content of contents; track $index; let i = $index) {
-          @if (i === index) {
-            <ng-container [ngTemplateOutlet]="content"></ng-container>
-          }
-        }
-      </mat-tab>
-    }
-  </mat-tab-group>
-</div>
+        {{ tab.label() }}
+      </ng-template>
+      <ng-container [ngTemplateOutlet]="tab.content"></ng-container>
+    </mat-tab>
+  }
+</mat-tab-group>
