Extended quill editor to support custom modules

--- a/libs/base/src/shared/components/ui/field/field.component.html
+++ b/libs/base/src/shared/components/ui/field/field.component.html
@@ -77,7 +77,7 @@
           format="html"
           [dir]="'ltr'"
           [placeholder]="placeholder || 'Write Here'"
-          [modules]="{ toolbar: {} }"
+          [modules]="quillModules"
         >
         </quill-editor>
       }
