fix - translation in fa.json and header table

--- a/libs/base/src/shared/components/features/table/table-header/table-header.component.html
+++ b/libs/base/src/shared/components/features/table/table-header/table-header.component.html
@@ -79,5 +79,5 @@
 }
 
 <cac-button icon="refresh" class="h-12 refresh-button" appearance="text" [disabled]="loading" (onClick)="onRefresh.emit($event)">
-  <span class="refresh-button-text">Refresh</span>
+  <span class="refresh-button-text" i18n="@@base.feature.table.header.refresh">Refresh</span>
 </cac-button>
